projects/examples/source/06.02.04.cpp
import demo;

import demo.submodule;

/////////////////////////////

int main()
{
    demo::test_v1();

	demo::test_v2();

//	demo::test_v3(); // error

	demo::test_v4();
}